# hyper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  dependencies.lua  premake5.lua
dependencies/glad/: premake5.lua
dependencies/glad/src/: glad.c
dependencies/lua/: premake5.lua
dependencies/tinyfiledialogs/: premake5.lua
dependencies/vendors/sol/: config.hpp  forward.hpp
dependencies/yaml-cpp/: premake5.lua
docs/: editor-ref.md  hyper.md  script-ref.md
engine/: premake5.lua
engine/src/: core.hpp  pch.h
engine/src/camera/: editor_camera.cpp  editor_camera.hpp  orthographic_camera.cpp  orthographic_camera.hpp  orthographic_controller.cpp  orthographic_controller.hpp
engine/src/core/: application.cpp  application.hpp  base.hpp  device.cpp  device.hpp  input.cpp  input.hpp  key_code.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  uuid.cpp  (+6 more)
hyper-pong/: GameLayer.cpp  GameLayer.hpp  main.cpp  premake5.lua
sandbox/: camera.hpp  game_layer.cpp  game_layer.hpp  main.cpp  premake5.lua  texture_rendering.hpp
sandbox-editor/: main.cpp  premake5.lua
sandbox-editor/src/: EditorLayer.cpp  EditorLayer.hpp  main.cpp
sandbox/assets/: fragment.frag  vertex.vert
scripts/: color_triangle.lua  fragment.frag
scripts/modules/: index.lua  shader.lua  shader_program.lua  shader_type.lua
src/: assert.hpp  log.hpp  main.cpp  shader.cpp  shader.hpp  utils.hpp
src/core/: base.hpp
src/renderer/: buffer.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/scripting/: lua_bindings.cpp  lua_bindings.hpp
(+102 files in other folders)
